# CdtTools

./: .gitignore  .gitmodules  CMakeLists.txt  ProtocolTools-Solution.pro
Communication/: CMakeLists.txt
FileTransClient/: CMakeLists.txt
FileTransServer/: CMakeLists.txt  main.cpp
LibVWStyles/: LibVWStyles.pro  libvwstyles.h  libvwstyles.qrc  libvwstyles_global.h  masklayer.cpp  masklayer.h  masklayer.ui  vwdialog.cpp  vwdialog.h  vwmainwidget.cpp  vwmainwidget.h  vwmainwindow.cpp  vwmainwindow.h
LibVWStyles/platformfeature/: platformfeature.h  platformfeature.pri  platformfeature_linux.cpp  platformfeature_win.cpp
LibVWStyles/platformfeature/x11/: shape.h  xutil.cpp  xutil.h
PressPlateTool/: CMakeLists.txt  PressPlateTool.pro  mainwindow.cpp  mainwindow.h
PressPlateTool/common/: CMakeLists.txt  gatherdata.cpp  ybsensordata.cpp
PressPlateTool/protocol/: CMakeLists.txt
PressPlateTool/ui/: CMakeLists.txt  editableeventfilter.cpp  gatherdetailpage.cpp  notificationbtn.cpp  ui.pri
PressPlateTool/ui/buttons/: fabbutton.cpp  outlinebutton.cpp  raisebutton.cpp  rippleeffect.cpp
PressPlateTool/ui/dialogs/: sensoradddialog.cpp  sensoradddialog.ui
PressPlateTool/ui/expand/: expandtile.cpp  expandwidgetitem.cpp  expandwidgetitem.h  expandwidgetitem_p.h  gathercontroller.cpp
PressPlateTool/ui/notification/: snackbar.cpp
PressPlateTool/ui/page/: configurationpage.cpp  configurationpage.h  gatherpage.cpp  tablepage.cpp
ProtocolTools/: ProtocolTools_en.ts  ProtocolTools_zh.ts  resources.qrc
ProtocolTools/translations/: ProtocolTools_en.qm  ProtocolTools_zh.qm
ProtocolTools/ui/components/: switchbutton.cpp  switchbutton.h  switchbutton_internal.cpp  switchbutton_p.h
ProtocolTools/ui/trees/: channeltreewidget.cpp
Protocols/: CMakeLists.txt  Protocols.pro  protocols_global.h
Protocols/IEC104/: CMakeLists.txt  IEC104.pri  iec104protocol.cpp  iec104protocol.h
Protocols/IEC104/frame/: iec104apci.cpp  iec104apci.h  iec104enums.h  iec104frame.cpp  iec104frame.h
Protocols/YBProtocol/: CMakeLists.txt
VWToolSets/: VWToolSets.pro  main.cpp  vwtoolsetswindow.cpp  vwtoolsetswindow.h  vwtoolsetswindow.ui
VWToolSets/ui/: ui.pri
